--- a/rwm/css/new-style.css
+++ b/rwm/css/new-style.css
@@ -1,9 +1,13 @@
+@font-face {
+    font-family: theme;
+    src: url('knockout.woff');
+}
+
 body{
     margin: 0;
-    overflow: hidden;
+    background: black;
 }
 .content{
-    background: black;
     /*width: 100%;
     height: 100%;
     padding: 0;
@@ -18,7 +22,12 @@ body{
     width: 100%;
     height: 100%;
 }
-
+#background{
+    z-index: -1;
+    position: fixed;
+    height: auto;
+    width: 100%;
+}
 #foreground{
     /*  width: 300px;
     height: 300px;*/
@@ -28,15 +37,21 @@ body{
 
 #input{
     position: absolute;
-    margin-top: 110px;
+    margin-top: 120px;
     background: none;
     border: none;
     color: red;
-    font-size: 64px;
+    font-size: 100px;
+    line-height: 16px;
     width: 350px;
     text-align: center;
+    font-family: theme;
+    text-transform:uppercase;
 }
-
+#save{
+     position: absolute;
+    margin-top: 240px;
+}
 .button.upload{
 	cursor: pointer;
     display: inline-block;
@@ -58,4 +73,20 @@ body{
     height: 20px;
     padding-right: 10px;
     top: 2px;
+}
+
+.canvas{
+    display: none;
+    background: black;
+}
+
+#canvas_item{
+    position: fixed;
+    z-index: 100;
+    font-size: 200px;
+    color: white;
+}
+
+.hidden{
+    display: none;
 }
